Fix for twic_malletinterpret import bug. Aligning dickinson-specific Python code with generic interpret code. Fixing text formatting for individual text view by changing p tags to display as block.

--- a/css/twic.css
+++ b/css/twic.css
@@ -132,7 +132,7 @@ body {
 }
 
 .text_p {
-    display: inline-block;
+    display: block;
     line-height: 32px;
 }
 
